--- a/src/pages/Home/news.scss
+++ b/src/pages/Home/news.scss
@@ -53,7 +53,8 @@
     @media (max-width: $mobile_l) {
       width: 100%;
       margin-right: 0;
-      padding: rem(20) 0;
+      padding: rem(20) 25px;
+      margin-bottom: 0;
     }
     h3 {
       font-size: rem(23);
@@ -61,8 +62,11 @@
       font-weight: 600;
       margin-bottom: rem(20);
       padding: 1.75rem 2rem 0;
+
       @media (max-width: $mobile_l) {
-        padding: 0 rem(20);
+        padding: 0;
+        font-size: 1.2rem;
+        margin-bottom: rem(30);
       }
       a {
         color: #fff;
@@ -72,12 +76,19 @@
     p {
       padding: 0 rem(40);
       @media (max-width: $mobile_l) {
-        padding: 0 rem(20);
+        padding: 0;
+        font-size: 1rem;
+        line-height: 1.4rem;
       }
       &.hashtag {
         text-align: right;
         margin: 0;
         margin-bottom: 0px;
+        @media (max-width: $mobile_l) {
+          font-size: 1.1rem;
+          font-weight: 600;
+          margin-bottom: 40px;
+        }
       }
     }
   }
