added page licenses

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,9 @@
 @import "../../sass/mixins.scss";
 
 .footer {
-	padding: rem(20) 0; 
+	height: 104px;
+    display: flex;
+    align-items: center;
 	background-color: $blue;
 	color: #fff;
 	&__block {
