--- a/src/pages/Home/news.scss
+++ b/src/pages/Home/news.scss
@@ -27,9 +27,13 @@
     width: 30%;
     color: #fff;
     padding: rem(27) 0;
-    margin-bottom: rem(50);
+    margin-bottom: rem(65);
     font-size: 0.9rem;
     line-height: 1.2rem;
+    @media (max-width: $tablets) {
+      width: 48%;
+      margin-bottom: rem(45);
+    }
     &:nth-child(1) {
       background: $blue;
     }
@@ -48,6 +52,9 @@
     }
     &:last-child {
       margin-right: 0;
+      @media (max-width: $tablets) {
+        width: 100%;
+      }
     }
     @media (max-width: $mobile_l) {
       width: 100%;
@@ -63,7 +70,7 @@
       padding: 1.75rem 2rem 0;
 
       @media (max-width: $mobile_l) {
-        padding: 0 ;
+        padding: 0;
         font-size: 1.2rem;
         margin-bottom: rem(30);
       }
