--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -5,6 +5,7 @@ $black: #000;
 $blue: #0d5ade;
 $darkblue: #004680;
 $lightblue: #05c3de;
+$gray: #555555;
 // fonts
 $font_family: "ProximaNova", sans-serif, Arial;
 $font_weight_bold: 600;
