--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,8 +8,9 @@
 img {
   max-width: 100%;
 }
-html, body{
-  max-width:100vw;
+html,
+body {
+  max-width: 100vw;
   overflow-x: hidden;
 }
 body {
@@ -169,7 +170,25 @@ h2 {
     color: $blue;
   }
 }
-
+.button {
+  font-size: 16px;
+  width: 161px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-decoration: none;
+  border: 2px solid;
+  @media (max-width: $mobile_l) {
+    width: 300px;
+    max-width: 100%;
+    height: 45px;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
 .typography--headersm {
   font-size: rem(40);
   line-height: rem(50);
