--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -86,6 +86,20 @@ h3 {
   margin: 0;
   padding: 0;
 }
+@media (max-width: $mobile_l) {
+  .products__wrap h3 {
+    font-size: 20px;
+  }
+}
+h3 {
+  font-weight: 600;
+  font-size: rem(30);
+  line-height: rem(37);
+  @media (max-width: $mobile_l) {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
 button:active,
 button:focus {
   outline: none;
@@ -125,7 +139,7 @@ h2 {
   min-height: calc(100vh - 164px);
   padding: 100px 0 60px;
   @media (max-width: $mobile_l) {
-    padding: 160px 0 60px;
+    padding: 160px 0 60px !important;
   }
 }
 .animate-hidden {
