--- a/src/components/MobileMenu/mobilemenu.scss
+++ b/src/components/MobileMenu/mobilemenu.scss
@@ -2,104 +2,107 @@
 @import "../../sass/mixins.scss";
 
 .mobile-menu {
-    transform: translateX(100vw);
-    @include transition(transform, 0.7s, ease);
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1000;
+  transform: translateX(100vw);
+  @include transition(transform, 0.7s, ease);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
 
-    &--is-active {
-        transform: translateX(0);
-        display: flex;
-        justify-content: flex-end;
-
-        ul li {
-            opacity: 1 !important;
-            -webkit-transition-delay: 0.25s !important;
-            transition-delay: 0.25s !important;
-            padding: 0 1.4rem;
-        }
-        .mobile-menu-inner {
-        }
-    }
-
-    .mobile-menu-inner {
-        background: $white;
-        position: relative;
-        width: 75%;
-        height: 100%;
-        z-index: 3;
-        display: flex;
-        float: right;
-    }
-
-    ul {
-        position: relative;
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        margin-top: 70px;
-        text-align: center;
-        max-width: 420px;
-        z-index: 3;
-        width: 100%;
-    }
+  &--is-active {
+    transform: translateX(0);
+    display: flex;
+    justify-content: flex-end;
 
     ul li {
-        border: 1px solid $black;
-        border-bottom: 0px;
-        font-size: 23px;
-        height: 53px;
-        color: $black;
-        display: block;
-        overflow: hidden;
-        position: relative;
-        opacity: 1;
-        -webkit-transition-delay: 0.25s;
-        transition-delay: 0.25s;
-        opacity: 0;
-        display: flex;
-        align-items: center;
-        justify-content: flex-end;
-        @include transition(opacity, 0.4s);
-
-        &:last-child {
-            border-bottom: 1px solid $black;
-            @include linear-gradient(
-                to left,
-                #f7a543,
-                #c5e2ce 35%,
-                #005e74 68%,
-                #8c89ff
-            );
-        }
-
-        a {
-            color: $black;
-            text-decoration: none;
-
-            &:hover {
-                cursor: pointer;
-            }
-        }
-        &:hover {
-            cursor: pointer;
-        }
+      opacity: 1 !important;
+      -webkit-transition-delay: 0.25s !important;
+      transition-delay: 0.25s !important;
+      padding: 0 1.4rem;
     }
-
-    &__close {
-        position: fixed;
-        top: 0;
-        height: 100%;
-        z-index: 10;
+    .mobile-menu-inner {
     }
+  }
 
-    &__close {
-        left: 0;
-        width: 100%;
-        z-index: 2;
+  .mobile-menu-inner {
+    background: $blue;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+
+    .logo-uma {
+      position: absolute;
+      top: 25px;
+      left: 30px;
+      height: 30px;
+      width: auto;
     }
+  }
+
+  ul {
+    position: relative;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    // margin-top: 70px;
+    text-align: center;
+    max-width: 420px;
+    z-index: 3;
+    width: 100%;
+  }
+
+  ul li {
+    border-bottom: 0px;
+    font-size: 22px;
+    height: 53px;
+    color: $black;
+    display: block;
+    overflow: hidden;
+    position: relative;
+    opacity: 1;
+    -webkit-transition-delay: 0.25s;
+    transition-delay: 0.25s;
+    opacity: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @include transition(opacity, 0.4s);
+
+    a {
+      color: $white;
+      text-decoration: none;
+      font-weight: 600;
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
+    &:hover {
+      cursor: pointer;
+    }
+  }
+  &__close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    span {
+      width: 3px;
+      height: 38px;
+      display: block;
+      transform: rotate(135deg);
+      background: #fff;
+      z-index: 999;
+      position: absolute;
+      top: 0;
+      left: 0;
+      &:nth-child(2) {
+        transform: rotate(45deg);
+      }
+    }
+  }
 }
