--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -91,6 +91,7 @@ h3 {
     font-size: 20px;
   }
 }
+
 h3 {
   font-weight: 600;
   font-size: rem(30);
@@ -126,10 +127,8 @@ li {
   list-style-type: none;
 }
 h2 {
-  @media (max-width: $mobile_l) {
-    font-size: 2rem !important;
-    line-height: 2.2rem !important;
-  }
+    font-size: rem(45) !important;
+    line-height: rem(55) !important;
 }
 .container {
   margin-right: auto;
@@ -150,7 +149,7 @@ h2 {
 /* From Lena Start*/
 .container {
   width: 1320px;
-  max-width: 90%;
+  max-width: 100%;
   margin: 0 auto;
   @media (max-width: $mobile_l) {
     max-width: 90%;
