Added page AboutUs

--- a/src/pages/Home/pagination.scss
+++ b/src/pages/Home/pagination.scss
@@ -108,3 +108,32 @@
     border: 1px solid #fff;
   }
 }
+.pagination3 {
+  margin-top: -80px;
+  position: absolute;
+  left: calc(50% - 670px);
+  li {
+    background-color: transparent;
+    border: 1px solid transparent;
+  }
+
+  li button {
+    cursor: pointer;
+    color: transparent;
+    border: 0;
+    outline: none;
+    background: transparent;
+    width: 16px;
+    height: 16px;
+    background-color: #fff;
+    border-radius: 100%;
+    @media (max-width: $mobile_l) {
+      width: 10px;
+      height: 10px;
+    }
+  }
+
+  li.slick-active {
+    border: 1px solid #fff;
+  }
+}
