--- a/src/pages/AboutUs/about_us.scss
+++ b/src/pages/AboutUs/about_us.scss
@@ -102,11 +102,11 @@
   @media (max-width: $mobile_l) {
     margin-top: 30px;
   }
-//   h2 {
-//     @media (max-width: $mobile_l) {
-//       margin-top: 30px !important;
-//     }
-//   }
+  //   h2 {
+  //     @media (max-width: $mobile_l) {
+  //       margin-top: 30px !important;
+  //     }
+  //   }
 }
 .about-us__item--blue {
   background: $blue;
@@ -136,7 +136,6 @@
         left: calc(50% - 33px);
       }
       @media (max-width: 1320px) {
-         
       }
     }
     .branch {
@@ -228,9 +227,11 @@
   display: inline-block;
   width: 100%;
   @media (max-width: $mobile_l) {
-      margin-top:30px;
+    margin-top: 30px;
     .pagination {
       left: auto;
+      margin-top: -50px;
+      max-width: 100%;
     }
   }
 }
