Changed Home page

--- a/src/pages/Home/news.scss
+++ b/src/pages/Home/news.scss
@@ -1,12 +1,34 @@
 @import "../../sass/variables.scss";
 @import "../../sass/mixins.scss";
 
-.competence {
+.news {
+  @media (max-width: $mobile_l) {
+    &__text h2 {
+      padding-left: 25px;
+      margin-top: -9rem;
+    }
+  }
+  &__top {
+    display: flex;
+    flex-direction: column;
+    min-height: rem(650);
+    background: #fff url("../../images/bg/bg_3.jpg") no-repeat center;
+    background-size: cover;
+    justify-content:flex-end;
+    color: #fff;
+    @media (max-width: $mobile_l) {
+      background: #fff url("../../images/bg/bg3_mob.jpg") no-repeat center;
+      background-size: cover;
+      height: 77vw;
+      min-height: auto;
+    }
+  }
   &__wrap {
     margin: 0 auto;
-    margin-top: rem(-80);
+    margin-top: -11rem;
     @media (max-width: $mobile_l) {
       width: 90%;
+      margin-top: -4rem;
     }
   }
 
@@ -14,10 +36,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: rem(50);
-    &:last-child {
-      margin-bottom: rem(0);
-    }
+    margin-bottom: rem(90);
+    // &:last-child {
+    //   margin-bottom: rem(0);
+    // }
     @media (max-width: $mobile_l) {
       background-color: $blue;
       padding-bottom: rem(30);
