--- a/src/pages/Home/competence.scss
+++ b/src/pages/Home/competence.scss
@@ -2,7 +2,7 @@
 @import "../../sass/mixins.scss";
 
 .competence {
-  margin-bottom: rem(120);
+  margin-bottom: rem(130);
   @media (max-width: $mobile_l) {
     margin-bottom: rem(50);
   }
@@ -10,23 +10,30 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    min-height: rem(650);
-    background: #fff url("../../images/bg/bg_3.jpg") no-repeat center;
+    // min-height: rem(650);
+    // background: #fff url("../../images/bg/bg_3.jpg") no-repeat center;
     background-size: cover;
     justify-content: center;
   }
+
   &__text {
+    padding-bottom: rem(76);
+    border-bottom: 1.5px solid $blue;
     @media (max-width: $mobile_l) {
-      min-height: rem(480);
-      margin-top: rem(-80);
+      border-bottom: 1px solid $blue;
+      padding-bottom: 30px;
     }
     h2.typography--header {
-      margin-bottom: rem(30);
-      color: #fff;
+      margin-bottom: rem(50);
+      color: #000;
+      font-size: rem(60) !important;
+      line-height: rem(73) !important;
       @media (max-width: $mobile_l) {
         width: 90%;
         margin: 0 auto;
         margin-bottom: rem(30);
+        font-size: 28px!important;
+        line-height: 33px!important;
       }
     }
     p.typography {
@@ -36,11 +43,12 @@
       font-family: ProximaNova;
       font-weight: 500;
       font-size: rem(30);
-      color: #fff;
+      color: #000;
       @media (max-width: $mobile_l) {
         font-size: 1rem;
         line-height: 1.3rem;
         width: 90%;
+        font-weight: 400;
       }
     }
   }
