--- a/src/pages/Home/news.scss
+++ b/src/pages/Home/news.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     min-height: rem(650);
-    background: #fff url("../../images/bg/bg_3.jpg") no-repeat center;
+    // background: #fff url("../../images/bg/bg_3.jpg") no-repeat center;
     background-size: cover;
     justify-content: center;
     color: #fff;
